--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "sass": "^1.69.6",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-inspect": "^0.8.1"
   },
   "dependencies": {
     "gsap": "^3.12.4"
