--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite-plugin-inspect": "^0.8.1"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.33",
     "gsap": "^3.12.4",
     "splitting": "^1.0.6",
     "swiper": "^11.0.5"
