--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "production": "vite build --mode production"
   },
   "devDependencies": {
     "sass": "^1.69.6",
+    "terser": "^5.26.0",
     "vite": "^5.0.8",
     "vite-plugin-inspect": "^0.8.1"
   },
