--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # .env
-VITE_GITHUB_USERNAME=
-VITE_GITHUB_REPO_NAME=
-VITE_IMPORT_URL=https://cdn.jsdelivr.net/gh/${VITE_GITHUB_USERNAME}/${VITE_GITHUB_REPO_NAME}@latest/src/components/`
+VITE_GITHUB_USERNAME=null
+VITE_GITHUB_REPO_NAME=null
+VITE_IMPORT_URL=https://cdn.jsdelivr.net/gh/${VITE_GITHUB_USERNAME}/${VITE_GITHUB_REPO_NAME}@v1/src/components/
