--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 # .env
 VITE_GITHUB_USERNAME=null
 VITE_GITHUB_REPO_NAME=null
-VITE_IMPORT_URL=https://cdn.jsdelivr.net/gh/${VITE_GITHUB_USERNAME}/${VITE_GITHUB_REPO_NAME}@v1/src/components/
+VITE_RELEASE_TAG=null
+VITE_IMPORT_URL=https://cdn.jsdelivr.net/gh/${VITE_GITHUB_USERNAME}/${VITE_GITHUB_REPO_NAME}@${VITE_RELEASE_TAG}/src/components/
