--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "production": "vite build --mode production"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "sass": "^1.69.6",
