Modify production env

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # .env
-VITE_IMPORT_URL=https://cdn.jsdelivr.net/gh/${VITE_GITHUB_USERNAME}/${VITE_GITHUB_REPO_NAME}@${VITE_RELEASE_TAG}/src/components/
+VITE_IMPORT_URL=https://cdn.jsdelivr.net/gh/${VITE_GITHUB_USERNAME}/${VITE_GITHUB_REPO_NAME}@latest/src/components/
